[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["umarmaul <122956420+umarmaul@users.noreply.github.com.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
sqlalchemy = "^2.0.34"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.main:main"